Added Scroll Up Animation Auto Annotation Template

--- a/auto-annotation-scroll-up-anim/index.html
+++ b/auto-annotation-scroll-up-anim/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="mouse"></div>
-<p>Scrolling Up..</p>
+<p>Scroll Up..</p>
 <script  src="./script.js"></script>
 </body>
 </html>
