Added Scroll Up Animation Auto Annotation Template

--- a/fade-in-text/auto_annotation.html
+++ b/fade-in-text/auto_annotation.html
@@ -17,7 +17,7 @@
 
         <div class="role">
             <div class="block"></div>
-            <p>>> Select your model pools</p>
+            <p>>> Select your ML models</p>
         </div>
 
     </div>
