scroll up update

--- a/auto-annotation-scroll-up-anim/index.html
+++ b/auto-annotation-scroll-up-anim/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="mouse"></div>
-<p style="word-spacing: normal;color:darkblue">Auto Annotation Complete</p>
+<!-- <p style="word-spacing: normal;color:darkblue">Auto Annotation Complete</p> -->
 <p>Scroll Up..</p>
 <script  src="./script.js"></script>
 </body>
