--- a/annotation-services/index.html
+++ b/annotation-services/index.html
@@ -28,7 +28,7 @@
 
   <div class="container__build">
 
-    <div class="build--powered">
+    <div class="build--powered" style="padding: 0.5rem;margin-top: 0.5rem">
       <svg viewbox="0 0 100 100">
         <circle cx="50" cy="50" r="50"/>
       </svg>
@@ -36,7 +36,7 @@
       <h3>Digital Document</h3>
     </div>
 
-    <div class="build--stack">
+    <div class="build--stack" style="margin-bottom: 0.5rem;">
         Predict · Send back Bounding Boxes
     </div>
 
