--- a/annotation-services/index.html
+++ b/annotation-services/index.html
@@ -36,7 +36,7 @@
       <h3>Digital Document</h3>
     </div>
 
-    <div class="build--stack" style="margin-bottom: 0.5rem;">
+    <div class="build--stack" style="margin-bottom: 0.5rem;" id="scrollEle">
         Predict · Send back Bounding Boxes
     </div>
 
@@ -52,6 +52,11 @@
   </div>
 
 </section>
+<script>
+  setTimeout(function() {
+    document.getElementById("scrollEle").scrollIntoView()
+  },2000)
+</script>
 
 </body>
 </html>
