--- a/fade-in-text/gujarati.html
+++ b/fade-in-text/gujarati.html
@@ -12,7 +12,7 @@
 
         <div class="title">
             <span class="block"></span>
-            <h1>Gujarati LANG<span></span></h1>
+            <h1>Modi Ji's Excerpts<span></span></h1>
         </div>
 
         <div class="role">
