Update and rename gujarati.html to modi.html

--- a/fade-in-text/modi.html
+++ b/fade-in-text/modi.html
@@ -12,7 +12,7 @@
 
         <div class="title">
             <span class="block"></span>
-            <h1>Modi Ji's Excerpts<span></span></h1>
+            <h1>Modi Ji<span></span></h1>
         </div>
 
         <div class="role">
