--- a/fade-in-text/modi.html
+++ b/fade-in-text/modi.html
@@ -17,7 +17,7 @@
 
         <div class="role">
             <div class="block"></div>
-            <p>>> Documents</p>
+            <p>>> Excerpts</p>
         </div>
 
     </div>
